--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title_separator          : ""
 name                     : &name "Aakanksha Sanctis"
 description              : &description "personal description"
 url                      : https://AakankshaSanctis.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : "/blog" # the subpath of your site, e.g. "/blog"
 repository               : "AakankshaSanctis/AakankshaSanctis.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
@@ -86,7 +86,7 @@ author:
   email            : "ars2352@columbia.edu"
   github           : "AakankshaSanctis"
   linkedin         : "https://www.linkedin.com/in/aakanksha-sanctis2020/"
-  resume           : "files/profile/Aakanksha_columbia_resume_July_2023.pdf"
+  resume           : "https://github.com/AakankshaSanctis/AakankshaSanctis.github.io/blob/master/files/profile/Aakanksha_columbia_resume_July_2023.pdf"
 
 
 # Reading Files
@@ -150,10 +150,7 @@ collections:
   teaching:
     output: true
     permalink: /:collection/:path/
-  publications:
-    output: true
-    permalink: /:collection/:path/
-  portfolio:
+  projects:
     output: true
     permalink: /:collection/:path/
   talks:
