--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title_separator          : ""
 name                     : &name "Aakanksha Sanctis"
 description              : &description "personal description"
 url                      : https://AakankshaSanctis.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/blog" # the subpath of your site, e.g. "/blog"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "AakankshaSanctis/AakankshaSanctis.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
@@ -57,7 +57,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : &twitter
+  username               : 
 facebook:
   username               :
   app_id                 :
@@ -86,7 +86,7 @@ author:
   email            : "ars2352@columbia.edu"
   github           : "AakankshaSanctis"
   linkedin         : "https://www.linkedin.com/in/aakanksha-sanctis2020/"
-  resume           : "https://github.com/AakankshaSanctis/AakankshaSanctis.github.io/blob/master/files/profile/Aakanksha_columbia_resume_July_2023.pdf"
+  # resume           : "https://github.com/AakankshaSanctis/AakankshaSanctis.github.io/blob/master/files/profile/Aakanksha_columbia_resume_July_2023.pdf"
 
 
 # Reading Files
@@ -188,23 +188,23 @@ defaults:
       share: true
       comments: true
   # _publications
-  - scope:
-      path: ""
-      type: publications
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comments: true
+  # - scope:
+  #     path: ""
+  #     type: publications
+  #   values:
+  #     layout: single
+  #     author_profile: true
+  #     share: true
+  #     comments: true
   # _portfolio
-  - scope:
-      path: ""
-      type: portfolio
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comment: true
+  # - scope:
+  #     path: ""
+  #     type: portfolio
+  #   values:
+  #     layout: single
+  #     author_profile: true
+  #     share: true
+  #     comment: true
   # _talks
   - scope:
       path: ""
