--- a/_config.yml
+++ b/_config.yml
@@ -178,6 +178,16 @@ defaults:
     values:
       layout: single
       author_profile: true
+  - scope:
+      path: ""
+      type: projects
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
   # _teaching
   - scope:
       path: ""
