Added resume as a side section

--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,7 @@ author:
   email            : "ars2352@columbia.edu"
   github           : "AakankshaSanctis"
   linkedin         : "https://www.linkedin.com/in/aakanksha-sanctis2020/"
+  resume           : "https://drive.google.com/file/d/1aGvClt4G2UZ-bFep08UCtnRy4Hz2mnZb/view?usp=drive_link"
   # resume           : "https://github.com/AakankshaSanctis/AakankshaSanctis.github.io/blob/master/files/profile/Aakanksha_columbia_resume_July_2023.pdf"
 
 
