--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,8 @@ main:
     url: /about/  
   - title: "Blog"
     url: /year-archive/
+  - title: "Resume"
+    url: https://drive.google.com/file/d/1aGvClt4G2UZ-bFep08UCtnRy4Hz2mnZb/view?usp=drive_link
     
   # - title: "CV"
   #   url: /cv/
