fixed image shape

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Aakanksha Sanctis"
-  avatar           : "profile.jpg"
+  avatar           : "zoom_profile.jpg"
   location         : "New York, USA"
   email            : "ars2352@columbia.edu"
   github           : "AakankshaSanctis"
