updated resume link

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
   - title: "Blog"
     url: /year-archive/
   - title: "Resume"
-    url: https://drive.google.com/file/d/1aGvClt4G2UZ-bFep08UCtnRy4Hz2mnZb/view?usp=drive_link
+    url: https://drive.google.com/drive/u/1/folders/1vap7iGxI-0yYf3qgzRgEI0D2J7lO2bMA
     
   # - title: "CV"
   #   url: /cv/
