made changes for publishing blog

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
   - title: "Blog"
     url: /year-archive/
   - title: "Resume"
-    url: https://drive.google.com/drive/u/1/folders/1vap7iGxI-0yYf3qgzRgEI0D2J7lO2bMA
+    url: https://drive.google.com/file/d/1Br8hZepUOsMa1JtxPxe9BgzZ1iysaA_f/view?usp=sharing
     
   # - title: "CV"
   #   url: /cv/
